[package]
name = "quicksort"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/quick_sort.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = "0.6.5"

[[bench]]
name = "sorting_benchmark"
harness = false
